# custom-cogs

./: LICENSE  README.md  pyproject.toml
battle/: __init__.py  battling_user.py  cog.py  menu.py
custom/: cog.py
